# kernel-performed-illegal-operation

./: .gitignore  AGENTS.md  Cargo.toml  PHASE_PLAN.md  README.md  RELEASE_NOTES.md  linker.ld  qemu_out2.txt  rust-toolchain.toml  x86_64-kpio.json
examples/browser-integration-test/: Cargo.toml
examples/browser-integration-test/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: css_parser_fuzz.rs  html_parser_fuzz.rs  syscall_fuzz.rs
fuzz/src/: css.rs  harness.rs  html.rs  js.rs  lib.rs  network.rs
graphics/: Cargo.toml
graphics/src/: animation.rs  browser.rs  buffer.rs  command.rs  compositor.rs  font.rs  lib.rs  optimization.rs  render.rs  surface.rs  vulkan.rs
graphics/src/webrender/: batch.rs  compositor.rs  display_list.rs  mod.rs  primitives.rs  renderer.rs  tile_cache.rs
kernel/: Cargo.toml
kernel/src/: allocator.rs  boot.rs  config.rs  gdt.rs  lib.rs  main.rs  panic.rs  serial.rs  test.rs
kernel/src/app/: error.rs  lifecycle.rs  mod.rs  permissions.rs  registry.rs  window_state.rs
kernel/src/arch/: cpu.rs  gdt.rs  mod.rs
kernel/src/browser/: compositor.rs  coordinator.rs  gpu.rs  input.rs  integration.rs  memory.rs  mod.rs  network.rs  origin.rs  protocol.rs  pwa_bridge.rs
kernel/src/crash/: dump.rs  handler.rs  mod.rs  reporter.rs  symbols.rs
kernel/src/driver/: mod.rs  pci.rs  ps2_mouse.rs
kernel/src/drivers/: mod.rs
kernel/src/graphics/: animation.rs  blitter.rs  compositor.rs  damage.rs  memcpy.rs  mod.rs  pipeline.rs  surface.rs
kernel/src/gui/: boot_animation.rs  desktop.rs  font.rs  framebuffer.rs  html_render.rs  input.rs  mod.rs  mouse.rs  notification.rs  notification_panel.rs  render.rs  splash.rs  taskbar.rs  theme.rs  toast.rs  window.rs
kernel/src/hw/: acpi.rs  detect.rs  mod.rs  pci.rs  usb.rs
kernel/src/i18n/: mod.rs
kernel/src/interrupts/: apic.rs  idt.rs  ioapic.rs  mod.rs  pic.rs  workqueue.rs
kernel/src/io/: executor.rs  mod.rs  operations.rs  ring.rs
kernel/src/ipc/: capability.rs  channel.rs  message.rs  mod.rs  mqueue.rs  services.rs  shm.rs
kernel/src/loader/: elf.rs  mod.rs  program.rs  segment_loader.rs
kernel/src/memory/: buddy.rs  frame.rs  heap.rs  mod.rs  optimization.rs  page_table.rs  refcount.rs  slab.rs  user_page_table.rs
kernel/src/net/: arp.rs  dhcp.rs  dns.rs  ethernet.rs  http.rs  ipv4.rs  mod.rs  tcp.rs  tls.rs  tls13.rs  udp.rs  wasi_bridge.rs  websocket.rs  x509.rs
kernel/src/process/: context.rs  linux.rs  manager.rs  mod.rs  signal.rs  table.rs  test_programs.rs
kernel/src/scheduler/: context.rs  mod.rs  optimization.rs  priority.rs  round_robin.rs  task.rs  userspace.rs
kernel/src/security/: audit.rs  hardening.rs  mod.rs  policy.rs  resource.rs  sandbox.rs
kernel/src/sync/: epoll.rs  futex.rs  mod.rs
kernel/src/syscall/: handlers.rs  linux.rs  linux_handlers.rs  mod.rs  percpu.rs  trace.rs
kernel/src/terminal/: ansi.rs  commands.rs  fs.rs  mod.rs  shell.rs
kernel/src/tests/: basic.rs  ipc_tests.rs  linux_compat_tests.rs  memory_tests.rs  mod.rs  process_tests.rs  scheduler_tests.rs  syscall_tests.rs
kernel/src/update/: downloader.rs  mod.rs  partition.rs  verifier.rs
kernel/src/vfs/: fd.rs  mod.rs  sandbox.rs
kernel/src/wasm/: engine.rs  host.rs  mod.rs
kpio-browser/: Cargo.toml
kpio-browser/src/: browser.rs  csp.rs  document.rs  events.rs  fs_bridge.rs  input.rs  input_bridge.rs  kernel_bridge.rs  lib.rs  loader.rs  navigation.rs  network_bridge.rs  pipeline.rs  renderer.rs  tabs.rs  tests.rs  window.rs
kpio-browser/src/a11y/: aria.rs  focus.rs  mod.rs  screen_reader.rs  visual.rs
kpio-browser/src/account/: credentials.rs  mod.rs  oauth.rs  profile.rs  session.rs
kpio-browser/src/apps/: app_launcher.rs  calculator.rs  desktop.rs  file_explorer.rs  media_viewer.rs  mod.rs  settings.rs  taskbar.rs  terminal.rs  text_editor.rs
kpio-browser/src/browser/: extensions.rs  mod.rs  private_mode.rs  tab_suspension.rs  tracking_protection.rs
kpio-browser/src/design/: animation.rs  browser.rs  components.rs  dialogs.rs  icons.rs  layout.rs  mod.rs  pages.rs  theme.rs  tokens.rs
kpio-browser/src/i18n/: bidi.rs  formatting.rs  locale.rs  messages.rs  mod.rs
kpio-browser/src/pwa/: background_sync.rs  cache_storage.rs  fetch_interceptor.rs  idb_engine.rs  indexed_db.rs  install.rs  kernel_bridge.rs  manifest.rs  mod.rs  notification_bridge.rs  push.rs  sw_bridge.rs  web_storage.rs  window.rs
kpio-browser/src/sync/: bookmarks.rs  engine.rs  history.rs  mod.rs  settings.rs  tabs.rs
kpio-browser/src/telemetry/: consent.rs  metrics.rs  mod.rs  reporter.rs
kpio-browser/src/ui/: bookmarks.rs  downloads.rs  history.rs  mod.rs  print.rs  settings.rs  tabs.rs
kpio-css/: Cargo.toml
kpio-css/src/: cascade.rs  computed.rs  lib.rs  parser.rs  properties.rs  selector.rs  stylesheet.rs  tests.rs  values.rs
kpio-dom/: Cargo.toml
kpio-dom/src/: document.rs  element.rs  events.rs  lib.rs  node.rs  style.rs  text.rs  traversal.rs
kpio-layout/: Cargo.toml
kpio-layout/src/: block.rs  box_model.rs  flex.rs  inline.rs  layout_box.rs  lib.rs  paint.rs  parallel.rs
network/: Cargo.toml
network/src/: dhcp.rs  dns.rs  http.rs  interface.rs  lib.rs  socket.rs  tcp.rs  udp.rs  websocket.rs
network/src/driver/: e1000.rs  mod.rs  virtio.rs
network/src/tls/: certificate.rs  handshake.rs  mod.rs  (+1 more)
runtime/: Cargo.toml
runtime/src/: app_launcher.rs  engine.rs  executor.rs  host.rs  host_gui.rs  host_net.rs  host_system.rs  instance.rs  interpreter.rs  lib.rs  memory.rs  module.rs  opcodes.rs  package.rs  parser.rs  posix_shim.rs  registry.rs  sandbox.rs  wasi.rs
runtime/wit/: kpio-gui.wit  kpio-net.wit  kpio-system.wit
servo-platform/: Cargo.toml
servo-platform/src/: error.rs  fs.rs  gpu.rs  ipc.rs  lib.rs  net.rs  thread.rs  time.rs  window.rs
storage/: Cargo.toml
storage/src/: cache.rs  fuse.rs  lib.rs  partition.rs  vfs.rs
tests/e2e/: Cargo.toml  http-server.py
tests/safety/: Cargo.toml
tests/wpt/: Cargo.toml
tools/boot/: Cargo.toml
tools/kpio-test/: Cargo.toml
(+331 files in other folders)
