[package]
name = "kpio-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
spin.workspace = true
bitflags.workspace = true
log.workspace = true
hashbrown.workspace = true

# Bootloader API (kernel side only - no bootimage dependency)
bootloader_api = "0.11"

# x86_64 specific
x86_64 = "0.15"
uart_16550 = "0.3"
pic8259 = "0.11"
pc-keyboard = "0.7"

# Lazy initialization
lazy_static = { version = "1.4", features = ["spin_no_std"] }

# Memory management
linked_list_allocator = "0.10"

# Async runtime (Phase 1+)
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

# VirtIO drivers (Phase 1+)
virtio-drivers = "0.7"

# WASM runtime (no_std compatible interpreter)
wasmi = { version = "0.31", default-features = false }

# Math functions for no_std
libm = "0.2"

[dev-dependencies]

[features]
default = ["serial-console", "memory-stats"]
serial-console = []
memory-stats = []
debug-interrupts = []
trace-syscalls = []
acpi-tables = []
smp = []

[[bin]]
name = "kernel"
path = "src/main.rs"

[lints]
workspace = true
