[package]
name = "kpio-runtime"
version = "0.1.0"
edition = "2021"
authors = ["KPIO Contributors"]
description = "WASM runtime for KPIO kernel"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/your-org/kernel-performed-illegal-operation"

[lib]
name = "kpio_runtime"
path = "src/lib.rs"

[dependencies]
# Core utilities (no_std compatible)
spin = "0.9"
bitflags = "2.4"
log = "0.4"

# Wasmtime runtime
# Note: Wasmtime 17.0 requires std environment
# Cannot be used directly inside the kernel; must run as userspace service
# no_std alternative: wasmi (interpreter, slower)
wasmtime = { version = "17.0", default-features = false, features = ["cranelift"], optional = true }

# WASI support (requires std)
wasi-common = { version = "17.0", default-features = false, optional = true }

# no_std-compatible WASM interpreter (alternative)
wasmi = { version = "0.31", default-features = false, optional = true }

# Shared kernel types
kpio-kernel = { path = "../kernel", optional = true }

[features]
default = []
kernel = ["kpio-kernel"]
# Use Wasmtime in std environment (userspace service)
std = ["wasmtime", "wasi-common"]
# Use wasmi in no_std environment (kernel-embedded, slower)
no_std_wasm = ["wasmi"]

[dev-dependencies]
# Testing utilities

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
