[package]
name = "kpio-wpt"
version = "0.1.0"
edition = "2024"
authors = ["KPIO Team"]
description = "Web Platform Tests integration for KPIO browser"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
spin = "0.9"
hashbrown = "0.14"

[dev-dependencies]

[features]
default = []
std = []
